--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -8,15 +9,24 @@ html {
   box-sizing: inherit;
 }
 
-html,
 body {
-  height: 100%;
+  min-width: 320px;
+  overflow-x: hidden;
   position: relative;
+  color: #fff;
+  @extend %ubuntu-light;
+  font-size: 17px;
+  line-height: 26px;
 }
 
 ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 ol,
-li,
 p,
 h1,
 h2,
@@ -26,13 +36,61 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
+  font-size: inherit;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 button:focus,
 input:focus {
   outline: transparent;
+}
+
+.container {
+  max-width: 1270px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.page-section {
+  min-height: 100vh;
+  background-image: url('../images/page-bg.jpg');
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  position: relative;
+  padding: 74px 0 50px;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(119.35deg, rgba(23, 26, 28, 0.72) 0%, #5E5E57 100%);
+    opacity: 0.15;
+  }
+  &__wrapper {
+    z-index: 1;
+  }
+}
+
+.title {
+  @extend %sf-regular;
+  font-size: 44px;
+  line-height: 53px;
+  padding-left: 25px;
+  margin-bottom: 55px;
+}
+
+.scroll__btn {
+  padding: 13px 0 30px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
