--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  height: 100%;
   min-width: 320px;
   overflow-x: hidden;
   position: relative;
@@ -17,6 +18,8 @@ body {
   @extend %ubuntu-light;
   font-size: 17px;
   line-height: 26px;
+  margin: 0;
+  padding: 0;
 }
 
 ul,
@@ -56,13 +59,11 @@ input:focus {
 }
 
 .page-section {
-  min-height: 100vh;
   background-image: url('../images/page-bg.jpg');
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
   position: relative;
-  padding: 74px 0 50px;
   &::before {
     content: '';
     position: absolute;
@@ -74,7 +75,10 @@ input:focus {
     opacity: 0.15;
   }
   &__wrapper {
+    min-height: 100vh;
+    position: relative;
     z-index: 1;
+    padding: 74px 0 50px;
   }
 }
 
@@ -84,6 +88,7 @@ input:focus {
   line-height: 53px;
   padding-left: 25px;
   margin-bottom: 55px;
+  padding-top: 160px;
 }
 
 .scroll__btn {
