--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -96,7 +96,53 @@
         }
     }
 }
-
+.products {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 50px;
+    }
+    &__text {
+        max-width: 440px;
+        p {
+            margin-bottom: 30px;
+        }
+    }
+    &__slider-box {
+        position: relative;
+        padding-top: 110px;
+    }
+    &__slider-text {
+        width: 285px;
+        position: absolute;
+        text-align: right;
+        font-size: 24px;
+        line-height: 28px;
+        @extend %ubuntu-medium;
+        bottom: 30px;
+        left: -150px;
+        z-index: 5;
+    }
+    &__slider {
+        max-width: 560px;
+    }
+}
+.slider-btn {
+    padding: 16px 26px;
+    border: none;
+    background-color: #fff;
+    position: absolute;
+    bottom: -45px;
+    right: 0;
+    cursor: pointer;
+    z-index: 5;
+    svg {
+        stroke: #000;
+    }
+    &__left {
+        right: 60px;
+    }
+}
 
 
 
