--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -125,6 +125,15 @@
     }
     &__slider {
         max-width: 560px;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 560px;
+            height: 276px;
+            border: 4px solid #fff;
+            top: -15px;
+            right: -17px;
+        }
     }
 }
 .slider-btn {
@@ -142,8 +151,99 @@
     &__left {
         right: 60px;
     }
+    &.slick-disabled {
+        background-color: #000;
+        svg{
+            stroke: #fff;
+        }
+    }
 }
-
+.benefits {
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 25px;
+    }
+    &__item {
+        margin-bottom: 100px;
+        display: flex;
+        align-items: flex-end;
+        &:nth-child(even) {
+            margin-left: 40px;
+            transform: translateY(25px);
+        }
+    }
+    &__item-1,
+    &__item-3 {
+        position: relative;
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            background-repeat: no-repeat;
+            background-position: 0 0;
+        }
+    }
+    &__item-1 {
+        &::before {
+            height: 48px;
+            width: 245px;
+            background-image: url('../images/line-1.svg');
+            top: 31px;
+            right: -56px;
+        }
+    }
+    &__item-3 {
+        &::before {
+           background-image: url('../images/line-3.svg');
+           width: 254px;
+           height: 40px;
+           top: 50px;
+           right: -55px;
+        }
+        &::after {
+            background-image: url('../images/line-2.svg');
+            width: 463px;
+            height: 62px;
+            top: -70px;
+            right: -54px;
+        }
+    }
+    &__num {
+        line-height: 41px;
+        font-size: 36px;
+        @extend %ubuntu-bold;
+        margin-right: 10px;
+    }
+    &__img {
+        position: relative;
+        margin-right: 32px;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 193px;
+            height: 128px;
+            border: 2px solid #fff;
+            right: -12px;
+            top: -12px;
+            z-index: -1;
+        }
+    }
+    &__info {
+        width: 300px;
+    }
+    &__info-title {
+        width: 137px;
+        font-size: 21px;
+        line-height: 24px;
+        @extend %ubuntu-bold;
+        margin-bottom: 10px;
+    }
+    &__info-text {
+        font-size: 15px;
+        line-height: 18px;
+    }
+}
 
 
 //-----------------------------------------------------------------------------------------------------------
