--- a/Mavic/css/style.css
+++ b/Mavic/css/style.css
@@ -18,7 +18,7 @@ body {
   font-weight: 500;
 }
 
-.header__phone {
+.header__phone, .benefits__num, .benefits__info-title {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
 }
@@ -328,6 +328,16 @@ input:focus {
   max-width: 560px;
 }
 
+.products__slider::before {
+  content: '';
+  position: absolute;
+  width: 560px;
+  height: 276px;
+  border: 4px solid #fff;
+  top: -15px;
+  right: -17px;
+}
+
 .slider-btn {
   padding: 16px 26px;
   border: none;
@@ -345,4 +355,111 @@ input:focus {
 
 .slider-btn__left {
   right: 60px;
+}
+
+.slider-btn.slick-disabled {
+  background-color: #000;
+}
+
+.slider-btn.slick-disabled svg {
+  stroke: #fff;
+}
+
+.benefits__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-left: 25px;
+}
+
+.benefits__item {
+  margin-bottom: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.benefits__item:nth-child(even) {
+  margin-left: 40px;
+  -webkit-transform: translateY(25px);
+      -ms-transform: translateY(25px);
+          transform: translateY(25px);
+}
+
+.benefits__item-1, .benefits__item-3 {
+  position: relative;
+}
+
+.benefits__item-1::before, .benefits__item-1::after, .benefits__item-3::before, .benefits__item-3::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.benefits__item-1::before {
+  height: 48px;
+  width: 245px;
+  background-image: url("../images/line-1.svg");
+  top: 31px;
+  right: -56px;
+}
+
+.benefits__item-3::before {
+  background-image: url("../images/line-3.svg");
+  width: 254px;
+  height: 40px;
+  top: 50px;
+  right: -55px;
+}
+
+.benefits__item-3::after {
+  background-image: url("../images/line-2.svg");
+  width: 463px;
+  height: 62px;
+  top: -70px;
+  right: -54px;
+}
+
+.benefits__num {
+  line-height: 41px;
+  font-size: 36px;
+  margin-right: 10px;
+}
+
+.benefits__img {
+  position: relative;
+  margin-right: 32px;
+}
+
+.benefits__img::before {
+  content: '';
+  position: absolute;
+  width: 193px;
+  height: 128px;
+  border: 2px solid #fff;
+  right: -12px;
+  top: -12px;
+  z-index: -1;
+}
+
+.benefits__info {
+  width: 300px;
+}
+
+.benefits__info-title {
+  width: 137px;
+  font-size: 21px;
+  line-height: 24px;
+  margin-bottom: 10px;
+}
+
+.benefits__info-text {
+  font-size: 15px;
+  line-height: 18px;
 }
