--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -172,42 +172,48 @@
             margin-left: 40px;
             transform: translateY(25px);
         }
-    }
-    &__item-1,
-    &__item-3 {
-        position: relative;
-        &::before,
-        &::after {
-            content: '';
-            position: absolute;
-            background-repeat: no-repeat;
-            background-position: 0 0;
+        &:nth-child(3) {
+            margin-left: 30px;
         }
-    }
-    &__item-1 {
-        &::before {
-            height: 48px;
-            width: 245px;
-            background-image: url('../images/line-1.svg');
-            top: 31px;
-            right: -56px;
+        &:nth-child(4) {
+            margin-left: 60px;
         }
-    }
-    &__item-3 {
-        &::before {
-           background-image: url('../images/line-3.svg');
-           width: 254px;
-           height: 40px;
-           top: 50px;
-           right: -55px;
+        &:first-child,
+        &:nth-child(3) {
+            position: relative;
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                background-repeat: no-repeat;
+                background-position: 0 0;
+            }
         }
-        &::after {
-            background-image: url('../images/line-2.svg');
-            width: 463px;
-            height: 62px;
-            top: -70px;
-            right: -54px;
+        &:first-child {
+            &::before {
+                height: 48px;
+                width: 245px;
+                background-image: url('../images/line-1.svg');
+                top: 31px;
+                right: -56px;
+            }
         }
+        &:nth-child(3) {
+            &::before {
+               background-image: url('../images/line-3.svg');
+               width: 254px;
+               height: 43px;
+               top: 50px;
+               right: -55px;
+            }
+            &::after {
+                background-image: url('../images/line-2.svg');
+                width: 463px;
+                height: 62px;
+                top: -70px;
+                right: -54px;
+            }
+        }    
     }
     &__num {
         line-height: 41px;
@@ -244,7 +250,75 @@
         line-height: 18px;
     }
 }
-
+.specification {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 25px;
+    }
+    &__item--center {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    &__box {
+        position: relative;
+        width: 280px;
+        margin-top: 10px;
+        &::before {
+            content: '';
+            position: absolute;
+            background-repeat: no-repeat;
+            background-position: 0 0;
+            background-size: contain;
+        }
+    }       
+    &__box-2 {
+        margin-top: 140px;
+    }
+    &__box-4 {
+        margin-top: 160px;
+    }
+    &__box-1::before {
+        background-image: url('../images/pointer-1.svg');
+        width: 229px;
+        height: 114px;
+        right: -140px;
+        top: 16px;
+    }
+    &__box-2::before {
+        background-image: url('../images/pointer-2.svg');
+        width: 346px;
+        height: 81px;
+        right: -308px;
+        top: -65px;
+    }
+    &__box-3::before {
+        background-image: url('../images/pointer-3.svg');
+        width: 258px;
+        height: 103px;
+        left: -299px;
+        top: 16px;
+    }
+    &__box-4::before {
+        background-image: url('../images/pointer-4.svg');
+        width: 124px;
+        height: 89px;
+        left: -135px;
+        top: -70px;
+    } 
+    &__box-title {
+        font-size: 21px;
+        line-height: 28px;
+        @extend %ubuntu-bold;
+        margin-bottom: 10px;
+    }
+    &__box-text {
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 18px;
+    }
+}
 
 //-----------------------------------------------------------------------------------------------------------
 //
