--- a/Mavic/css/style.css
+++ b/Mavic/css/style.css
@@ -18,7 +18,7 @@ body {
   font-weight: 500;
 }
 
-.header__phone, .benefits__num, .benefits__info-title {
+.header__phone, .benefits__num, .benefits__info-title, .specification__box-title {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
 }
@@ -391,18 +391,26 @@ input:focus {
           transform: translateY(25px);
 }
 
-.benefits__item-1, .benefits__item-3 {
+.benefits__item:nth-child(3) {
+  margin-left: 30px;
+}
+
+.benefits__item:nth-child(4) {
+  margin-left: 60px;
+}
+
+.benefits__item:first-child, .benefits__item:nth-child(3) {
   position: relative;
 }
 
-.benefits__item-1::before, .benefits__item-1::after, .benefits__item-3::before, .benefits__item-3::after {
+.benefits__item:first-child::before, .benefits__item:first-child::after, .benefits__item:nth-child(3)::before, .benefits__item:nth-child(3)::after {
   content: '';
   position: absolute;
   background-repeat: no-repeat;
   background-position: 0 0;
 }
 
-.benefits__item-1::before {
+.benefits__item:first-child::before {
   height: 48px;
   width: 245px;
   background-image: url("../images/line-1.svg");
@@ -410,15 +418,15 @@ input:focus {
   right: -56px;
 }
 
-.benefits__item-3::before {
+.benefits__item:nth-child(3)::before {
   background-image: url("../images/line-3.svg");
   width: 254px;
-  height: 40px;
+  height: 43px;
   top: 50px;
   right: -55px;
 }
 
-.benefits__item-3::after {
+.benefits__item:nth-child(3)::after {
   background-image: url("../images/line-2.svg");
   width: 463px;
   height: 62px;
@@ -461,5 +469,89 @@ input:focus {
 
 .benefits__info-text {
   font-size: 15px;
+  line-height: 18px;
+}
+
+.specification__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 25px;
+}
+
+.specification__item--center {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.specification__box {
+  position: relative;
+  width: 280px;
+  margin-top: 10px;
+}
+
+.specification__box::before {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+
+.specification__box-2 {
+  margin-top: 140px;
+}
+
+.specification__box-4 {
+  margin-top: 160px;
+}
+
+.specification__box-1::before {
+  background-image: url("../images/pointer-1.svg");
+  width: 229px;
+  height: 114px;
+  right: -140px;
+  top: 16px;
+}
+
+.specification__box-2::before {
+  background-image: url("../images/pointer-2.svg");
+  width: 346px;
+  height: 81px;
+  right: -308px;
+  top: -65px;
+}
+
+.specification__box-3::before {
+  background-image: url("../images/pointer-3.svg");
+  width: 258px;
+  height: 103px;
+  left: -299px;
+  top: 16px;
+}
+
+.specification__box-4::before {
+  background-image: url("../images/pointer-4.svg");
+  width: 124px;
+  height: 89px;
+  left: -135px;
+  top: -70px;
+}
+
+.specification__box-title {
+  font-size: 21px;
+  line-height: 28px;
+  margin-bottom: 10px;
+}
+
+.specification__box-text {
+  font-size: 15px;
+  font-weight: 300;
   line-height: 18px;
 }
