--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -319,6 +319,179 @@
         line-height: 18px;
     }
 }
+.questions {
+    &__items {
+        max-width: 757px;
+        padding-bottom: 15px;
+    }
+    &__item {
+        background-color: rgba(0, 0, 0, 0.3);
+        max-width: 690px;
+        position: relative;
+        &:nth-child(3)::before {
+            content: '';
+            position: absolute;
+            width: 319px;
+            height: 125px;
+            top: -33px;
+            right: -386px;
+            background-image: url('../images/questions-bg.png');
+        }
+    }
+    &__item-title {
+        max-width: 690px;
+        font-size: 21px;
+        line-height: 28px;
+        @extend %ubuntu-medium;
+        color: rgba(#fff, .8);
+        padding: 20px 10px 20px 40px;
+        margin-bottom: 4px;
+        position: relative;
+        cursor: pointer;
+        &::after {
+            content: url('../images/accordion-arrow.svg');
+            position: absolute;
+            width: 72px;
+            height: 67px;
+            background-color: #fff;
+            right: -72px;
+            top: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    &__item-text {
+        padding: 0 5px 75px 50px;
+        font-size: 15px;
+        line-height: 22px;
+        margin: 0 0 4px;
+        display: none;
+    }
+    &__item.questions__item--active {
+        .questions__item-title::after {
+            transform: rotate(180deg);
+        }
+        .questions__item-text {
+            display: block;
+        }
+    }    
+}
+.contacts {
+    &__inner {
+        display: flex;
+        padding-left: 25px;
+    }
+    &__info {
+        width: 240px;
+        margin-right: 60px;
+    }
+    &__info-box {
+        margin-bottom: 30px;
+    }
+    &__info-title {
+        font-size: 21px;
+        line-height: 24px;
+        @extend %ubuntu-bold;
+        margin:0 0 13px;
+    }
+    &__info-phone, 
+    &__info-email {
+        font-size: 15px;
+        line-height: 18px;
+    }
+    &__info-email:hover {
+        text-decoration: underline;
+    }
+    &__form {
+        width: 570px;
+        margin-right: 106px;
+    }
+    &__form-title {
+        font-size: 21px;
+        line-height: 24px;
+        @extend %ubuntu-bold;
+        margin:0 0 13px;
+    }
+    &__form-text {
+        font-size: 15px;
+        line-height: 18px;
+        margin: 0 0 12px;
+    }
+    &__form-line {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    &__form-input,
+    &__form-textarea {
+        border: none;
+        @extend %ubuntu-regular;
+        background: rgba(0, 0, 0, 0.5);
+        font-size: 13px;
+        line-height: 15px;
+        padding: 15px;
+        color: #fff;
+        &::placeholder {
+            color: rgba(#fff, .4);
+        }
+    }
+    &__form-input {
+        width: 49%; 
+        
+    }
+    &__form-textarea {
+        width: 100%;
+        min-height: 144px;
+        resize: none;
+        margin-bottom: 20px;
+    }
+    &__form-btn {
+        text-transform: uppercase;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        @extend %ubuntu-bold;
+        border-radius: 2px;
+        border: 1px solid #fff;
+        padding: 9px 15px;
+        color: #fff;
+        background-color: transparent;
+        cursor: pointer;
+        transition: all .3s;
+        &:hover {
+            background-color: #fff;
+            color: #000;
+        }
+    }
+    &__social-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    &__social-item {
+        margin: 14px 0;
+    }
+    &__social-link {
+        opacity: 0.5;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+.footer {
+    position: absolute;
+    bottom: 32px;
+    left: 0;
+    right: 0;
+    &__copy {
+        text-align: right;
+        font-size: 13px;
+        line-height: 15px;
+        color: rgba(#fff, .64);
+    }
+}
 
 //-----------------------------------------------------------------------------------------------------------
 //
