--- a/Mavic/css/style.css
+++ b/Mavic/css/style.css
@@ -13,12 +13,17 @@ body {
   font-weight: 300;
 }
 
-.header__inner, .products__slider-text {
+.contacts__form-input, .contacts__form-textarea {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 400;
+}
+
+.header__inner, .products__slider-text, .questions__item-title {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
 }
 
-.header__phone, .benefits__num, .benefits__info-title, .specification__box-title {
+.header__phone, .benefits__num, .benefits__info-title, .specification__box-title, .contacts__info-title, .contacts__form-title, .contacts__form-btn {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
 }
@@ -554,4 +559,231 @@ input:focus {
   font-size: 15px;
   font-weight: 300;
   line-height: 18px;
+}
+
+.questions__items {
+  max-width: 757px;
+  padding-bottom: 15px;
+}
+
+.questions__item {
+  background-color: rgba(0, 0, 0, 0.3);
+  max-width: 690px;
+  position: relative;
+}
+
+.questions__item:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  width: 319px;
+  height: 125px;
+  top: -33px;
+  right: -386px;
+  background-image: url("../images/questions-bg.png");
+}
+
+.questions__item-title {
+  max-width: 690px;
+  font-size: 21px;
+  line-height: 28px;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 20px 10px 20px 40px;
+  margin-bottom: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.questions__item-title::after {
+  content: url("../images/accordion-arrow.svg");
+  position: absolute;
+  width: 72px;
+  height: 67px;
+  background-color: #fff;
+  right: -72px;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.questions__item-text {
+  padding: 0 5px 75px 50px;
+  font-size: 15px;
+  line-height: 22px;
+  margin: 0 0 4px;
+  display: none;
+}
+
+.questions__item.questions__item--active .questions__item-title::after {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.questions__item.questions__item--active .questions__item-text {
+  display: block;
+}
+
+.contacts__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 25px;
+}
+
+.contacts__info {
+  width: 240px;
+  margin-right: 60px;
+}
+
+.contacts__info-box {
+  margin-bottom: 30px;
+}
+
+.contacts__info-title {
+  font-size: 21px;
+  line-height: 24px;
+  margin: 0 0 13px;
+}
+
+.contacts__info-phone, .contacts__info-email {
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.contacts__info-email:hover {
+  text-decoration: underline;
+}
+
+.contacts__form {
+  width: 570px;
+  margin-right: 106px;
+}
+
+.contacts__form-title {
+  font-size: 21px;
+  line-height: 24px;
+  margin: 0 0 13px;
+}
+
+.contacts__form-text {
+  font-size: 15px;
+  line-height: 18px;
+  margin: 0 0 12px;
+}
+
+.contacts__form-line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.contacts__form-input, .contacts__form-textarea {
+  border: none;
+  background: rgba(0, 0, 0, 0.5);
+  font-size: 13px;
+  line-height: 15px;
+  padding: 15px;
+  color: #fff;
+}
+
+.contacts__form-input::-webkit-input-placeholder, .contacts__form-textarea::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.contacts__form-input::-moz-placeholder, .contacts__form-textarea::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.contacts__form-input:-ms-input-placeholder, .contacts__form-textarea:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.contacts__form-input::-ms-input-placeholder, .contacts__form-textarea::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.contacts__form-input::placeholder, .contacts__form-textarea::placeholder {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.contacts__form-input {
+  width: 49%;
+}
+
+.contacts__form-textarea {
+  width: 100%;
+  min-height: 144px;
+  resize: none;
+  margin-bottom: 20px;
+}
+
+.contacts__form-btn {
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  border-radius: 2px;
+  border: 1px solid #fff;
+  padding: 9px 15px;
+  color: #fff;
+  background-color: transparent;
+  cursor: pointer;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+}
+
+.contacts__form-btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.contacts__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contacts__social-item {
+  margin: 14px 0;
+}
+
+.contacts__social-link {
+  opacity: 0.5;
+}
+
+.contacts__social-link:hover {
+  opacity: 1;
+}
+
+.footer {
+  position: absolute;
+  bottom: 32px;
+  left: 0;
+  right: 0;
+}
+
+.footer__copy {
+  text-align: right;
+  font-size: 13px;
+  line-height: 15px;
+  color: rgba(255, 255, 255, 0.64);
 }
