--- a/Mavic/css/style.css
+++ b/Mavic/css/style.css
@@ -171,6 +171,7 @@ input:focus {
   left: 0;
   right: 0;
   bottom: 0;
+  cursor: pointer;
 }
 
 .header {
@@ -227,6 +228,14 @@ input:focus {
 
 .menu__list-item + .menu__list-item {
   padding-left: 20px;
+}
+
+.menu__list-phone {
+  display: none;
+}
+
+.menu__btn {
+  display: none;
 }
 
 .top {
@@ -786,4 +795,68 @@ input:focus {
   font-size: 13px;
   line-height: 15px;
   color: rgba(255, 255, 255, 0.64);
+}
+
+@media (max-width: 1366px) {
+  body {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .top__title {
+    font-size: 75px;
+    line-height: 90px;
+    margin-bottom: 20px;
+  }
+  .top__inner img {
+    width: 80%;
+  }
+  .top__text {
+    margin: 15px 0 25px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .menu {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .menu__list {
+    display: none;
+  }
+  .menu__btn {
+    display: block;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 0;
+    cursor: pointer;
+  }
+  .menu__btn::before,
+  .menu__btn::after {
+    content: '';
+    width: 24px;
+    height: 2px;
+    background-color: #e0e0e0;
+    display: block;
+    margin-bottom: 4px;
+  }
+  .menu__btn::after {
+    margin-bottom: 0;
+    width: 16px;
+    margin-left: auto;
+  }
+  .menu__btn-line {
+    background-color: #e0e0e0;
+    width: 24px;
+    display: block;
+    height: 2px;
+    margin-bottom: 4px;
+  }
+  .header__phone {
+    display: none;
+  }
+  .header__btn {
+    margin-right: 0;
+  }
 }
