--- a/#src/scss/_media.scss
+++ b/#src/scss/_media.scss
@@ -20,7 +20,58 @@
         order: 1;
     }
     .menu__list {
-        display: none;
+       position: fixed;
+       left: 0;
+       right: 0;
+       top: 0;
+       bottom: 0;
+       background: rgba(#1c1c1c, .9);
+       z-index: -1;
+       display: flex;
+       padding-top: 90px;
+       padding-left: 24px;
+       flex-direction: column;
+       justify-content: space-around;
+       transform: translateY(-1000%);
+       transition: transform .5s;
+       overflow: auto;
+       &--active {
+        transform: translateY(0);
+       }
+
+    }
+    .menu__list-item + .menu__list-item {
+        padding-left: 0;
+    }
+    .menu__list-item {
+        margin-bottom: 35px;
+        &::first-child {
+            margin-top: auto;
+        }
+    }
+    .menu__list-phone,
+    .menu__list-link {
+        display: block;
+    }
+    .menu__list-phone {
+        padding-top: 33px;
+        position: relative;
+        margin-bottom: auto;
+        margin-top: auto;
+        &::before {
+            content: '';
+            position: absolute;
+            border-top: 1px solid rgba(#fff, .24);
+            top: 0;
+            left: -24px;
+            right: 0;
+        }
+    }
+    .header__phone-menu {
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 17px;
+        color: #fff;
     }
     .menu__btn {
         display: block;
@@ -38,6 +89,7 @@
         background-color: #e0e0e0;
         display: block;
         margin-bottom: 4px;
+        transition: transform .3s;
     }
     .menu__btn::after {
         margin-bottom: 0;
@@ -50,7 +102,22 @@
         display: block;
         height: 2px;
         margin-bottom: 4px;
+        opacity: 1;
+        transition: opacity .6s;
     }
+    .menu__btn.menu__btn--active {
+        .menu__btn-line {
+            opacity: 0;
+            transition: opacity 0s;
+        }
+        &::after {
+            width: 24px;
+            transform: translateY(-6px) rotate(-135deg);
+        }
+        &::before {
+            transform: translateY(6px) rotate(135deg);
+        }
+    } 
     .header__phone {
         display: none;
     }
@@ -69,5 +136,17 @@
         padding: 13px 0;
     }
 }
+@media (max-height: 375px) {
+    .menu__list-phone {
+        padding: 15px 0;
+    }
+}
+@media (max-height: 340px) {
+    .menu__list-item {
+        margin-bottom: 18px;
+    }
+}
+
+
 
 
