--- a/#src/components/_head.html
+++ b/#src/components/_head.html
@@ -5,5 +5,5 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Document</title>
+    <title>Mavic 2 Pro</title>
   </head>
