--- a/Mavic/css/style.css
+++ b/Mavic/css/style.css
@@ -360,7 +360,7 @@ input:focus {
   border: none;
   background-color: #fff;
   position: absolute;
-  bottom: -45px;
+  bottom: -48px;
   right: 0;
   cursor: pointer;
   z-index: 5;
@@ -816,9 +816,32 @@ input:focus {
   .top__text {
     margin: 15px 0 25px;
   }
+  .title {
+    padding-top: 90px;
+  }
+  .products__slider-box {
+    padding-top: 0;
+  }
+  .products__slider-text {
+    width: 285px;
+    position: absolute;
+    text-align: right;
+    font-size: 24px;
+    line-height: 28px;
+    bottom: auto;
+    left: auto;
+    top: -105px;
+    right: 0;
+    z-index: 5;
+  }
 }
 
 @media (max-width: 1100px) {
+  .header {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 25px 0;
+    top: 0;
+  }
   .menu {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
@@ -951,6 +974,75 @@ input:focus {
   }
   .header__btn {
     margin-right: 0;
+  }
+  .products__text {
+    padding-right: 15px;
+  }
+  .products__slider-box {
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .title {
+    padding-top: 50px;
+    font-size: 35px;
+    line-height: 42px;
+    margin-bottom: 35px;
+  }
+  .products__slider-text {
+    font-size: 20px;
+    line-height: 22px;
+    top: -85px;
+  }
+}
+
+@media (max-width: 940px) {
+  .products__inner {
+    display: block;
+  }
+  .products__text {
+    padding-right: 0;
+    max-width: 100%;
+    margin-bottom: 140px;
+  }
+  .products__slider {
+    margin-left: auto;
+  }
+  .products__slider-box {
+    margin-bottom: 80px;
+  }
+}
+
+@media (max-width: 680px) {
+  .products__inner {
+    padding-left: 0;
+  }
+  .title {
+    padding-left: 0;
+    padding-top: 40px;
+    font-size: 26px;
+    line-height: 28px;
+    margin-bottom: 15px;
+  }
+  .products__text p {
+    margin-bottom: 10px;
+  }
+  .products__text {
+    margin-bottom: 100px;
+  }
+  .products__slider {
+    min-width: 100%;
+  }
+  .products__slider::before {
+    width: 100%;
+    height: 100%;
+  }
+  .products__slider img {
+    width: 100%;
+  }
+  .products__slider-box {
+    padding-bottom: 50px;
   }
 }
 
