--- a/#src/scss/_media.scss
+++ b/#src/scss/_media.scss
@@ -3,6 +3,11 @@
         font-size: 16px;
         line-height: 22px;
     }
+    .header {
+        background: rgba(0, 0, 0, .5);
+        padding: 25px 0;
+        top: 0;
+    }
     .top__title {
         font-size: 75px;
         line-height: 90px;
@@ -31,14 +36,31 @@
         top: -105px;
         right: 0;
         z-index: 5;
+    }
+    .benefits {
+        .title {
+            padding-top: 10px;
+        }
+    }
+    .benefits__item {
+        margin-bottom: 80px;
     } 
 }
-@media (max-width: 1100px) {
-    .header {
-        background: rgba(0, 0, 0, .5);
-        padding: 25px 0;
-        top: 0;
+@media (max-width: 1280px) {
+    .benefits__item {
+        width: 45%;
     }
+    .benefits__item:first-child::before {
+        width: 40%;
+    }
+    .benefits__item:nth-child(3)::before {
+        width: 35%;
+    }
+    .benefits__item:nth-child(3)::after {
+        width: 80%;
+    }
+}
+@media (max-width: 1100px) {
     .menu {
         order: 1;
     }
@@ -153,6 +175,30 @@
     .products__slider-box {
         padding-right: 20px;
     }
+    .benefits__item:first-child::before,
+    .benefits__item:nth-child(3)::before,
+    .benefits__item:nth-child(3)::after {
+        display: none;
+    }
+    .benefits__items {
+        display: block;
+    }
+    .benefits__item {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+    .benefits__item:nth-child(even) {
+        transform: translateY(0);
+    }
+    .benefits__item:nth-child(even) {
+        margin-left: 0;
+    }
+    .benefits__item:nth-child(3) {
+        margin-left: 0;
+    }
+    .benefits__info {
+        width: 80%;
+    }
 }
 @media (max-width: 1024px) {
     .title {
@@ -183,6 +229,20 @@
         margin-bottom: 80px;
     }
 }
+@media (max-width: 787px) {
+    .benefits__item:nth-child(even) {
+        margin-left: 0;
+    }
+    .benefits__items {
+        padding-left: 0;
+    }
+    .benefits__item:nth-child(3) {
+        margin-left: 0;
+    }
+    .benefits__info {
+        width: 100%;
+    }
+}
 @media (max-width: 680px) {
     .products__inner {
         padding-left: 0;
@@ -201,7 +261,7 @@
         margin-bottom: 100px;
     }
     .products__slider {
-        min-width: 100%;
+        max-width: 100%;
         &::before {
             width: 100%;
             height: 100%;
@@ -223,6 +283,22 @@
     }
     .scroll__btn {
         padding: 13px 0;
+    }
+    .benefits__num {
+        display: none;
+    }
+    .benefits__item {
+        display: block;
+    }
+    .benefits__img {
+        padding: 20px 0;
+        img {
+            display: block;
+            margin-left: auto;
+        }
+    }
+    .benefits__img::before {
+        top: 8px;
     }
 }
 @media (max-height: 375px) {
