--- a/#src/scss/_media.scss
+++ b/#src/scss/_media.scss
@@ -44,6 +44,31 @@
     }
     .benefits__item {
         margin-bottom: 80px;
+    }
+    .specification__box-2 {
+        margin-top: 115px;
+    }
+    .specification__box-4 {
+        margin-top: 115px;
+    }
+    .specification__item {
+        text-align: center;
+        img {
+            width: 80%;
+        }
+    }
+    .specification__item--center {
+        text-align: center;
+        margin-left: 0; 
+        margin-right: 0;
+        img {
+            width: 80%;
+        }
+    }
+    .specification {
+        .title {
+            padding-top: 40px;
+        }
     } 
 }
 @media (max-width: 1280px) {
@@ -58,6 +83,20 @@
     }
     .benefits__item:nth-child(3)::after {
         width: 80%;
+    }
+}
+@media (max-width: 1160px) {
+    .specification__box-3::before {
+        width: 190px;
+        height: 78px;
+        left: -230px;
+        top: 44px;
+    }
+    .specification__box-2::before {
+        width: 310px;
+        height: 93px;
+        left: -238px;
+        top: -65px;
     }
 }
 @media (max-width: 1100px) {
@@ -212,6 +251,12 @@
         line-height: 22px;
         top: -85px;
     }
+    .specification__box-1::before,
+    .specification__box-4::before,
+    .specification__box-2::before,
+    .specification__box-3::before {
+        display: none;
+    }
 }
 @media (max-width: 940px) {
     .products__inner {
@@ -229,6 +274,15 @@
         margin-bottom: 80px;
     }
 }
+@media (max-width: 877px) {
+    .specification__box-4,
+    .specification__box-2 {
+        margin-top: 50px;
+    }
+    .specification__inner {
+        padding-left: 0;
+    }
+}
 @media (max-width: 787px) {
     .benefits__item:nth-child(even) {
         margin-left: 0;
@@ -241,6 +295,29 @@
     }
     .benefits__info {
         width: 100%;
+    }
+    .specification__inner {
+        padding-left: 0;
+    }
+    .specification__inner {
+        display: block;
+    }
+    .specification__box {
+        width: 100%;
+    }
+    .specification__box-4,
+    .specification__box-2 {
+        margin-top: 25px;
+    }
+    .specification__item--center {
+        margin-top: 0;
+    }
+    .specification .title {
+        padding-top: 20px;
+        text-align: center;
+    }
+    .specification__box {
+        margin-top: 25px;
     }
 }
 @media (max-width: 680px) {
