--- a/Mavic/css/style.css
+++ b/Mavic/css/style.css
@@ -845,6 +845,29 @@ input:focus {
   .benefits__item {
     margin-bottom: 80px;
   }
+  .specification__box-2 {
+    margin-top: 115px;
+  }
+  .specification__box-4 {
+    margin-top: 115px;
+  }
+  .specification__item {
+    text-align: center;
+  }
+  .specification__item img {
+    width: 80%;
+  }
+  .specification__item--center {
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .specification__item--center img {
+    width: 80%;
+  }
+  .specification .title {
+    padding-top: 40px;
+  }
 }
 
 @media (max-width: 1280px) {
@@ -859,6 +882,21 @@ input:focus {
   }
   .benefits__item:nth-child(3)::after {
     width: 80%;
+  }
+}
+
+@media (max-width: 1160px) {
+  .specification__box-3::before {
+    width: 190px;
+    height: 78px;
+    left: -230px;
+    top: 44px;
+  }
+  .specification__box-2::before {
+    width: 310px;
+    height: 93px;
+    left: -238px;
+    top: -65px;
   }
 }
 
@@ -1042,6 +1080,12 @@ input:focus {
     line-height: 22px;
     top: -85px;
   }
+  .specification__box-1::before,
+  .specification__box-4::before,
+  .specification__box-2::before,
+  .specification__box-3::before {
+    display: none;
+  }
 }
 
 @media (max-width: 940px) {
@@ -1061,6 +1105,16 @@ input:focus {
   }
 }
 
+@media (max-width: 877px) {
+  .specification__box-4,
+  .specification__box-2 {
+    margin-top: 50px;
+  }
+  .specification__inner {
+    padding-left: 0;
+  }
+}
+
 @media (max-width: 787px) {
   .benefits__item:nth-child(even) {
     margin-left: 0;
@@ -1073,6 +1127,29 @@ input:focus {
   }
   .benefits__info {
     width: 100%;
+  }
+  .specification__inner {
+    padding-left: 0;
+  }
+  .specification__inner {
+    display: block;
+  }
+  .specification__box {
+    width: 100%;
+  }
+  .specification__box-4,
+  .specification__box-2 {
+    margin-top: 25px;
+  }
+  .specification__item--center {
+    margin-top: 0;
+  }
+  .specification .title {
+    padding-top: 20px;
+    text-align: center;
+  }
+  .specification__box {
+    margin-top: 25px;
   }
 }
 
