--- a/#src/scss/_media.scss
+++ b/#src/scss/_media.scss
@@ -292,6 +292,14 @@
     .products__slider-box {
         margin-bottom: 80px;
     }
+    .contacts__inner {
+        flex-wrap: wrap;
+    }
+    .contacts__form {
+        width: 100%;
+        margin-right: 0;
+        order: 1;
+    }
 }
 @media (max-width: 877px) {
     .specification__box-4,
@@ -343,6 +351,9 @@
     }
     .questions__item-text {
         padding: 0 15px 40px 30px;
+    }
+    .contacts__inner {
+        padding-left: 2px;
     }
 }
 @media (max-width: 680px) {
@@ -412,6 +423,20 @@
     }
     .questions__item-title {
         padding: 15px 75px 15px 15px;
+    }
+    .contacts__form-line {
+        display: block;
+    }
+    .contacts__form-input {
+        width: 100%;
+        margin-top: 10px;
+    }
+}
+@media (max-height: 400px) {
+    .contacts__social-list {
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around;
     }
 }
 @media (max-height: 375px) {
